--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1228,4 +1228,7 @@ The cookies for the privacy consent are saved and the process needs to be done o
   <data name="ToolTipTumblrAuthErrorAutoRetryDescription" xml:space="preserve">
     <value>When an authorization error occurs, the app tries a new way of handling it in order to continue.</value>
   </data>
+  <data name="DownloadTexts2" xml:space="preserve">
+    <value>Download texts</value>
+  </data>
 </root>
