--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -990,6 +990,7 @@ template: {Post Id}_{Photo Index}_{Original Filename}</value>
   %h  post date and time in GMT (yyyyMMddHHmmss)
   %u  post timestamp (number)
   %o  blog name of reblog origin
+  %q  blog name of origin (either reblog origin or blog)
   %p  post title
   %i   post id
   %n  image index (of photo sets, else skipped)
