--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.zh.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.zh.resx
@@ -1015,6 +1015,7 @@
   %h  发布日期和时间 GMT (yyyyMMddHHmmss)
   %u  帖子时间戳（数字）
   %o  转发来源的博客名称
+  %q  blog name of origin (either reblog origin or blog)
   %p  帖子标题
   %i   帖子ID
   %n  图像编号（图像集中，否则忽略）
